--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="/assets/b348dd24.app.min.css">
+  <link rel="stylesheet" href="assets/b348dd24.app.min.css">
 
   <!-- for more details visit: https://github.com/yeoman/grunt-usemin -->
 
-  <script src="/assets/03258c8c.config.min.js"></script>
+  <script src="assets/03258c8c.config.min.js"></script>
 
-  <script src="/assets/354ae28f.vendor.min.js"></script>
+  <script src="assets/354ae28f.vendor.min.js"></script>
 
-  <script src="/assets/15b24484.app.min.js"></script>
+  <script src="assets/15b24484.app.min.js"></script>
 
 
 </head>
